--- a/DotNetCore_Dappper.API/Properties/launchSettings.json
+++ b/DotNetCore_Dappper.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BeehooeDataService.API": {
+    "DotNetCore_Dappper.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
