--- a/DotNetCore_Dappper.Domain/DotNetCore_Dappper.Domain.csproj
+++ b/DotNetCore_Dappper.Domain/DotNetCore_Dappper.Domain.csproj
@@ -11,13 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BeehooeDataService.Infrastructure\BeehooeDataService.Infrastructure.csproj" />
-    <ProjectReference Include="..\BeehooeDataService.Model\BeehooeDataService.Model.csproj" />
+    <Folder Include="IRepository\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="IRepository\" />
-    <Folder Include="Repository\" />
+    <ProjectReference Include="..\DotNetCore_Dappper.Infrastructure\DotNetCore_Dappper.Infrastructure.csproj" />
+    <ProjectReference Include="..\DotNetCore_Dappper.Model\DotNetCore_Dappper.Model.csproj" />
   </ItemGroup>
 
 </Project>
