--- a/DotNetCore_Dappper.Infrastructure/DotNetCore_Dappper.Infrastructure.csproj
+++ b/DotNetCore_Dappper.Infrastructure/DotNetCore_Dappper.Infrastructure.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DotNetCore_Dappper.Model\DotNetCore_Dappper.Model.csproj" />
   </ItemGroup>
 
