--- a/DotNetCore_Dappper.API/appsettings.json
+++ b/DotNetCore_Dappper.API/appsettings.json
@@ -11,5 +11,13 @@
         "Default": "Warning"
       }
     }
+  },
+  "DataBase": {
+    "ConnectStr": "Server=192.168.3.5;Database=dmptest;User ID=dmp;Password=123456789;SslMode=none;",
+    "Type": "MySql"
+  },
+  "Redis": {
+    "ConnectStr": "127.0.0.1:6379,allowadmin=true",
+    "RedisKey": "Demo:Test"
   }
 }
