--- a/DotNetCore_Dappper.API/DotNetCore_Dappper.API.csproj
+++ b/DotNetCore_Dappper.API/DotNetCore_Dappper.API.csproj
@@ -25,6 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Config\System\DataBase - MySql.xml">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
@@ -32,5 +38,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
