feat:新增JWT支持，还需进一步完善：接口根据权限进行判断是否能够调用

--- a/DotNetCore_Dappper.API/appsettings.json
+++ b/DotNetCore_Dappper.API/appsettings.json
@@ -13,11 +13,17 @@
     }
   },
   "DataBase": {
-    "ConnectStr": "Server=192.168.3.5;Database=dmptest;User ID=dmp;Password=123456789;SslMode=none;",
+    "ConnectStr": "127.0.0.1;Database=dmptest;User ID=dmp;Password=123456789;SslMode=none;",
     "Type": "MySql"
   },
   "Redis": {
     "ConnectStr": "127.0.0.1:6379,allowadmin=true",
     "RedisKey": "Demo:Test"
+  },
+  "Jwt": {
+    "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
+    "JwtIssuer": "http://localhost:37898",
+    "JwtAudience": "http://localhost:37898",
+    "JwtExpireDays": 30
   }
 }
