feat:注册jwt，redis，添加swagger；

--- a/DotNetCore_Dappper.API/appsettings.json
+++ b/DotNetCore_Dappper.API/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "DataBase": {
-    "ConnectStr": "127.0.0.1;Database=dmptest;User ID=dmp;Password=123456789;SslMode=none;",
+    "ConnectStr": "Server=139.196.88.174;Database=dmptest;User ID=dmp;Password=123456789;SslMode=none;",
     "Type": "MySql"
   },
   "Redis": {
