feat:新增Log4net 和全局异常捕获

--- a/DotNetCore_Dappper.Infrastructure/DotNetCore_Dappper.Infrastructure.csproj
+++ b/DotNetCore_Dappper.Infrastructure/DotNetCore_Dappper.Infrastructure.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="JWT" Version="4.0.0" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
@@ -26,10 +28,6 @@
     <Reference Include="Microsoft.Extensions.Configuration.Json">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.configuration.json\2.0.2\lib\netstandard2.0\Microsoft.Extensions.Configuration.Json.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
