--- a/DotNetCore_Dappper.API/DotNetCore_Dappper.API.csproj
+++ b/DotNetCore_Dappper.API/DotNetCore_Dappper.API.csproj
@@ -43,6 +43,6 @@
     </Content>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties Properties_4launchSettings_1json__JSONSchema="http://json.schemastore.org/renovate" appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
